# DCE-DSC-MRI_CodeCollection

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test_setup.cfg
.pylint.d/: test.DCEmodels.test_LEK_UoEdinburghUK1.stats
binder/: postBuild
doc/: Create a local copy of repository.md  Creating a Python test file.md  Description.txt  Guidelines for code contribution.md  Navigating through TF2.3-CodeLibrary.md  OLD_Create a local copy of repository.md  code_contributions.csv  code_contributions.txt  code_contributions.xlsx  code_contributions.xml  code_contributions_record.csv  code_contributions_record.md  convert_to_md.py  readme.md  test.txt
notebooks/: 2CUM.ipynb  2CXM.ipynb  2cmpExchangeModel.ipynb  Acknowledgements.ipynb  DCE.md  DCE_ToftsModel.ipynb  DCEmodels.md  DSC.md  DSC_pars.ipynb  ExtendedToftsModel.ipynb  GeorgiouAIF.ipynb  ParkerAIF.ipynb  PatlakModel.ipynb  PopulationAIF.md  PreclinicalAIF.ipynb  RIDERneuro_overview.ipynb  SItoC.ipynb  T1_tests_output.ipynb  T1mapping.md  T1mapping_QIBAv1.ipynb  T1mapping_QIBAv2.ipynb  T1mapping_RIDER.ipynb  ToftsModel.ipynb  ToftsModel.md  VariableFlipAngle.ipynb  _config.yml  _toc.yml  contributors.ipynb  guidelines.md  intro.md  overview_of_code_collection.md  plotting_results_nb.py  requirements.txt  results-meta.json
phantoms_json/: phantom13a.json  phantom8a.json  sample_data.json
src/: Description.txt  utils.py
src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: Description.txt  helpers.py  results-meta.json  (+4 more)
(+989 files in other folders)
