[tool.poetry]
name = "osipi"
version = "0.1.0"
description = "The OSIPI Code Collection"
authors = ["Luis Torres <luistorres@flywheel.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "osipi"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
dicom = "0.9.9.post1"
imageio = "2.19.3"
joblib = "1.1.0"
lmfit = "1.0.3"
mat73 = "0.59"
matplotlib = "3.5.2"
nibabel = "3.2.2"
numpy = "1.23.0rc2"
opencv-python = "4.5.5.64"
openpyxl = "3.2.0b1"
pandas = "1.4.2"
progressbar = "2.5"
pytest = "7.1.2"
scipy = "1.8.1"
pre-commit = "^3.2.2"
black = "^23.3.0"
pylint = "^2.17.2"
tabulate = "^0.9.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
